--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "material-ui-v5-react-template",
+  "name": "product-preview-001",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
