--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,9 @@
 /.pnp
 .pnp.js
 
+
 # docs
-/docs
+/storybook-static
 
 # testing
 /coverage
@@ -20,6 +21,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+
 
 npm-debug.log*
 yarn-debug.log*
