--- a/package.json
+++ b/package.json
@@ -20,10 +20,19 @@
     "typescript": "^4.7.2",
     "web-vitals": "^2.1.4"
   },
+  "jest": {
+    "collectCoverageFrom": [
+      "<rootDir>/src/components/**/*.{js,jsx,ts,tsx}",
+      "<rootDir>/src/containers/**/*.{js,jsx,ts,tsx}",
+      "!**/node_modules/**",
+      "!**/*.stories.{js,jsx,ts,tsx}"
+    ]
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:coverage": "react-scripts test --watchAll=false --coverage",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
